# baize

./: .gitignore  Cargo.toml  README.md  obsidian_ai_publisher_prd.md  obsidian_ai_publisher_prd_Rust.md  obsidian_ai_publisher_prd_v2.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
crates/baize-cli/: Cargo.toml
crates/baize-cli/src/: main.rs
crates/baize-core/: Cargo.toml
crates/baize-core/src/: build.rs  lib.rs  models.rs  parser.rs  scan.rs
crates/baize-core/tests/: workflow.rs
docs/plans/: 2026-03-12-bootstrap-foundation.md  2026-03-12-core-mvp-publishing.md  2026-03-12-mcp-support.md  2026-03-12-typescript-orchestrator.md
