[workspace]
members = ["crates/baize-core", "crates/baize-cli"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Gavin Young"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tempfile = "3.23.0"
walkdir = "2.5.0"
